# hector_tracked_vehicles_common

./: README.md  hector_tracked_vehicles_common.rosinstall
hector_flipper_simulator/: CMakeLists.txt  package.xml
hector_flipper_simulator/launch/: hector_flipper_simulator.launch
hector_flipper_simulator/src/: main.cpp
hector_tracked_vehicles_description/: CMakeLists.txt  package.xml
hector_tracked_vehicles_description/calibrations/: jasmine_2018_vlp16_calibration.urdf.xacro  spin_lidar_calibration.urdf.xacro
hector_tracked_vehicles_description/config/: jasmine_ugv_2018_gazebo_ros_controllers.yaml  obelix_flippers_gazebo.yaml
hector_tracked_vehicles_description/launch/: spawn_jasmine_2018.launch  spawn_jasmine_ugv_2018.launch  spawn_jasmine_ugv_base.launch  spawn_jasmine_ugv_vision_box.launch  spawn_obelix_rviz.launch  spawn_obelix_ugv.launch  spawn_obelix_ugv_base.launch  xacrodisplay_bertl_ugv_vision_box.launch  xacrodisplay_common.launch  xacrodisplay_jasmine_2018_ugv.launch  xacrodisplay_jasmine_ugv_2018.launch  xacrodisplay_jasmine_ugv_base.launch  xacrodisplay_jasmine_ugv_vision_box.launch  xacrodisplay_obelix_ugv_standalone.launch  xacrodisplay_obelix_ugv_vision_box.launch  xacrodisplay_obelix_ugv_vision_box_small_arm.launch
hector_tracked_vehicles_description/launch/load_description/: load_description_jasmine_2018.launch
hector_tracked_vehicles_description/meshes/jasmine_ugv/: jasmine_ugv_simple_colored_v001.dae  obelix_ugv_simple_colored_v001.dae
hector_tracked_vehicles_description/meshes/jasmine_ugv/arm/: link0.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl
hector_tracked_vehicles_description/meshes/jasmine_ugv/gripper/: gripper_finger.stl  gripper_palm.stl
hector_tracked_vehicles_description/rviz/: xacrodisplay.rviz
hector_tracked_vehicles_description/urdf/: bertl_ugv_vision_box.gazebo.xacro  bertl_ugv_vision_box.urdf.xacro  jasmine_2018_structure_addons.urdf.xacro  jasmine_2018_ugv.urdf.xacro  jasmine_2018_ugv_arm.gazebo.xacro  jasmine_2018_ugv_arm.urdf.xacro  jasmine_ugv_base.gazebo.xacro  jasmine_ugv_base.urdf.xacro  jasmine_ugv_standalone.urdf.xacro  jasmine_ugv_tracks.urdf.xacro  jasmine_ugv_vision_box.urdf.xacro  obelix_2flipper_box.urdf.xacro  obelix_2flipper_wheel.urdf.xacro  obelix_flipper_box.urdf.xacro  obelix_model.urdf.xacro  obelix_ugv_base.gazebo.xacro  obelix_ugv_base.urdf.xacro  obelix_ugv_standalone.urdf.xacro  obelix_ugv_standalone2.urdf.xacro  obelix_ugv_standalone_gazebo.urdf.xacro  obelix_ugv_vision_box.urdf.xacro  obelix_ugv_vision_box_small_arm.urdf.xacro  tracked_wheel.urdf.xacro
hector_tracked_vehicles_flipper_controller/: CMakeLists.txt  package.xml
hector_tracked_vehicles_flipper_controller/config/: config.yaml
hector_tracked_vehicles_flipper_controller/include/: flippercontroller.h
hector_tracked_vehicles_flipper_controller/launch/: bertl_flipper_controller.launch
hector_tracked_vehicles_flipper_controller/src/: flippercontroller.cpp  hector_tracked_vehicles_flipper_controller_node.cpp
hector_tracked_vehicles_self_filter/: CMakeLists.txt  package.xml
hector_tracked_vehicles_self_filter/config/: color_cloud_self_filter_asterix.yaml  color_cloud_self_filter_jasmine_2018.yaml  color_cloud_self_filter_visionbox.yaml  containment_self_filter_jasmine_2018.yaml  raycast_self_filter_argo_tracker.yaml  raycast_self_filter_jasmine_2018.yaml  robot_body_filter_jasmine_2018.yaml  robot_body_filter_visionbox.yaml  self_filter_argo_tracker.yaml  self_filter_argo_tracker_color_cloud.yaml  self_filter_hector_argo_tracker.yaml  self_filter_hector_tracker.yaml  self_filter_jasmine_2018.yaml  self_filter_obelix_multisensor_experimental.yaml
