<package>
  <name>hector_tracked_vehicles_description</name>
  <version>0.1.0</version>
  <description>hector_tracked_vehicles_description contains URDF/xacro models of tracked vehicles used by Team Hector Darmstadt</description>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_tracked_vehicles_description</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_tracked_vehicle_plugin</run_depend>
  <run_depend>hector_components_description</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>hector_imu_attitude_to_tf</run_depend>
  <run_depend>hector_sensors_description</run_depend>
  <run_depend>hector_xacro_tools</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>pr2_controller_manager</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roboticsgroup_gazebo_plugins</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>xacro</run_depend>

  <!-- Dependencies needed only for running tests. -->

</package>
